--- a/CYOA.html
+++ b/CYOA.html
@@ -9,7 +9,31 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play CYOA.</tw-noscript></noscript></tw-story>
-<tw-storydata name="CYOA" startnode="1" creator="Twine" creator-version="2.9.0" format="Harlowe" format-version="3.3.9" ifid="9DEEF0FD-0A52-4A92-959E-B16CF06CE44E" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="800,325" size="100,100">Would you like to go to [[Branch 0]] or [[Branch 1]]?</tw-passagedata><tw-passagedata pid="2" name="Branch 0" tags="" position="925,325" size="100,100">Welcome to branch 0!</tw-passagedata><tw-passagedata pid="3" name="Branch 1" tags="" position="800,450" size="100,100">You made it to branch 1!</tw-passagedata></tw-storydata>
+<tw-storydata name="CYOA" startnode="1" creator="Twine" creator-version="2.9.0" format="Harlowe" format-version="3.3.9" ifid="9DEEF0FD-0A52-4A92-959E-B16CF06CE44E" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="800,325" size="100,100">You&#39;re a computer science student at Simon Fraser University, and after months of applying for internships, you finally get a job offer:
+
+&#39;&#39;Software Developer at Atlas&#39;&#39;
+* Developing survellience software
+* Database managment and design
+* Pays $78,354 per year
+
+You can either [[take the job]] or [[research the position]].</tw-passagedata><tw-passagedata pid="2" name="take the job" tags="" position="925,450" size="100,100"></tw-passagedata><tw-passagedata pid="3" name="research the position" tags="" position="675,450" size="100,100">When searching the web for Atlas&#39; past, you find two main articles:
+* [[Wikipedia]] - Atlas Cybersecurity
+* [[Vox]] - Atlas: The Imact of Survellience on Society
+
+After inspecting the pages, you decide to either [[take the job]] or [[decline the offer]].</tw-passagedata><tw-passagedata pid="4" name="Wikipedia" tags="" position="675,575" size="100,100">After reading through the extensive site, you conclude the following:
+* Atlas employees are generally well treated, and interns often get considered for rehiring.
+* Atlas&#39; work includes civillian survelience, which the public finds controversial.
+* The company has many government contracts, but the details are kept secret.
+
+[[Return to search results -&gt;research the position]] </tw-passagedata><tw-passagedata pid="5" name="Vox" tags="" position="800,575" size="100,100">The Vox article is heavily against survellience, it talks about how survellence can evolve into control, and how independent companies should not be contracted for government work.
+
+The article also covers a dataleak from 2011, where footage, personal files, and employee SIN numbers were leaked via a SQL injection attack.
+
+[[Return to search results -&gt;research the position]] </tw-passagedata><tw-passagedata pid="6" name="decline the offer" tags="" position="550,575" size="100,100">You decline the offer. Over the next year you get no more job offers, and are on your way to graduation. While driving, you hear over the radio; &quot;Atlas responsible for 35 deaths of minorities who were being tracked at a party by military drone. Many at the party were under the influence of drugs and alcohol, and one man tried to strike the drone. The drone, taking this as an act of agression, tear gassed the individual. Upon the assult of the individual, the others at the party started trying to help and also got gassed. The situation quickly became aggressive, and the AI aboard the drone assesed the situation as a terrorism attack, shooting and killing all but one individual who was at the party&quot;.
+
+Later on, while passing the stage to get your degree, you reflect on the importance of research, and are thankful you did the right thing, rather than whatever would help yourself the most. 
+
+(text-colour:red)[The End.]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
