Trying to get conditional to work, should only show text if the user opened at least one of the articles, prior to taking the job

--- a/CYOA.html
+++ b/CYOA.html
@@ -16,16 +16,21 @@
 * Database managment and design
 * Pays $78,354 per year
 
-You can either [[take the job]] or [[research the position]].</tw-passagedata><tw-passagedata pid="2" name="take the job" tags="" position="925,450" size="100,100"></tw-passagedata><tw-passagedata pid="3" name="research the position" tags="" position="675,450" size="100,100">When searching the web for Atlas&#39; past, you find two main articles:
+You can either [[take the job]] or [[research the position]].</tw-passagedata><tw-passagedata pid="2" name="take the job" tags="" position="925,450" size="100,100">You take the position.
+
+After about 8 months of monotenous SQL work, you are promoted to real software development. In order to take the promotion, you must sign a non-disclosure agreement. The company can&#39;t tell you much until you sign the agreement. (if: (history: where (passage:)&#39;s tags contains &quot;research&quot;)&#39;s length &gt;= 1)[With your prior research, you know this is likely related to a government contract, and you are hesitant to take the position. You know the ethics of contracted out surveillance is sketchy. 
+
+[[Keep your monotenous SQL querying job]].]
+[[Take the promotion]].</tw-passagedata><tw-passagedata pid="3" name="research the position" tags="" position="675,450" size="100,100">When searching the web for Atlas&#39; past, you find two main articles:
 * [[Wikipedia]] - Atlas Cybersecurity
 * [[Vox]] - Atlas: The Imact of Survellience on Society
 
-After inspecting the pages, you decide to either [[take the job]] or [[decline the offer]].</tw-passagedata><tw-passagedata pid="4" name="Wikipedia" tags="" position="675,575" size="100,100">After reading through the extensive site, you conclude the following:
+After inspecting the pages, you decide to either [[take the job]] or [[decline the offer]].</tw-passagedata><tw-passagedata pid="4" name="Wikipedia" tags="research" position="675,575" size="100,100">After reading through the extensive site, you conclude the following:
 * Atlas employees are generally well treated, and interns often get considered for rehiring.
 * Atlas&#39; work includes civillian survelience, which the public finds controversial.
 * The company has many government contracts, but the details are kept secret.
 
-[[Return to search results -&gt;research the position]] </tw-passagedata><tw-passagedata pid="5" name="Vox" tags="" position="800,575" size="100,100">The Vox article is heavily against survellience, it talks about how survellence can evolve into control, and how independent companies should not be contracted for government work.
+[[Return to search results -&gt;research the position]] </tw-passagedata><tw-passagedata pid="5" name="Vox" tags="research" position="800,575" size="100,100">The Vox article is heavily against survellience, it talks about how survellence can evolve into control, and how independent companies should not be contracted for government work.
 
 The article also covers a dataleak from 2011, where footage, personal files, and employee SIN numbers were leaked via a SQL injection attack.
 
@@ -33,7 +38,7 @@ The article also covers a dataleak from 2011, where footage, personal files, and
 
 Later on, while passing the stage to get your degree, you reflect on the importance of research, and are thankful you did the right thing, rather than whatever would help yourself the most. 
 
-(text-colour:red)[The End.]</tw-passagedata></tw-storydata>
+(text-colour:red)[The End.]</tw-passagedata><tw-passagedata pid="7" name="Keep your monotenous SQL querying job" tags="" position="925,575" size="100,100"></tw-passagedata><tw-passagedata pid="8" name="Take the promotion" tags="" position="1050,575" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
