Started work on alternative ending branches

--- a/CYOA.html
+++ b/CYOA.html
@@ -42,7 +42,26 @@ The article also covers a dataleak from 2011, where footage, personal files, and
 
 Later on, while passing the stage to get your degree, you reflect on the importance of research, and are thankful you did the right thing, rather than whatever would help yourself the most. 
 
-(text-colour:red)[The End.]</tw-passagedata><tw-passagedata pid="7" name="Take the promotion" tags="" position="1050,575" size="100,100"></tw-passagedata><tw-passagedata pid="8" name="Keep your monotenous SQL querying job" tags="" position="925,575" size="100,100"></tw-passagedata></tw-storydata>
+(text-colour:red)[The End.]</tw-passagedata><tw-passagedata pid="7" name="Take the promotion" tags="" position="1050,575" size="100,100">You accept your new position and immediately start work on military drones. You combine LLM&#39;s and Computer Vision to create a system that can detect malicous behaviour and make police reports. The drones themselves just contain cameras.
+
+[[Next-&gt;LLM training]]</tw-passagedata><tw-passagedata pid="8" name="Keep your monotenous SQL querying job" tags="" position="925,575" size="100,100"></tw-passagedata><tw-passagedata pid="9" name="LLM training" tags="" position="1050,700" size="100,100">Now you&#39;ve set up your models, you must train them. You are provided with a database of criminals by the police, so that you can catch escaped criminals, and hold higher suspicon of prior offenders. The only issue is that the database, being based on outdated (racist) data, finds a higher percentage of minorities than what is found in the population. You are concerned that the pattern-finding nature of your AI model will cause discrimination towards minorities within the drone. You&#39;re left with a difficult choice:
+
+[[Bring the issue up with your boss]]
+[[Discuss the issue with co-workers]]
+[[Stay quiet and keep coding]]</tw-passagedata><tw-passagedata pid="10" name="Discuss the issue with co-workers" tags="" position="1300,825" size="100,100">You plan a huge meeting with all the other employees working on the same project as you (other than the bosses). You find that your co-workers have also witnessed the same neglectful nature, and they are also concerned about potential discrimination within all survellence systems provided by Atlas.
+
+The group starts discussing protest, and revealing information about the company. Although you believe in the cause, you don&#39;t want to stir up too much drama with your first job, and you are concerned about the legal reprocussions of breaking your NDA. 
+
+You are left with only three choices at this time:
+[[Quit the job and stay quiet]]
+[[Break NDA and protest]]
+[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="11" name="Stay quiet and keep coding" tags="" position="775,850" size="100,100"></tw-passagedata><tw-passagedata pid="12" name="Bring the issue up with your boss" tags="" position="1050,825" size="100,100">You attend a meeting with your boss, and discuss the possibility of discrimination within the drones due to an outdated database. Your boss, stressed and pressured to release the product as soon as possible, considers the issue, but quickly shuts you down.
+&#39;&#39;You should appreciate the opportunity we have provided you, rather than stirring up problems in the workplace. Keep quiet and keep coding, or get fired!&#39;&#39;
+
+This response is confusing and the language spoke towards you is upsetting. With rage fuelling inside of you, and a willingness to improve the world, you are left with two choices.
+
+[[Discuss the issue with co-workers]] 
+[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="13" name="Quit the job and stay quiet" tags="" position="1225,975" size="100,100"></tw-passagedata><tw-passagedata pid="14" name="Break NDA and protest" tags="" position="1425,975" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
