Working on dramatic transition towards bad ending

--- a/CYOA.html
+++ b/CYOA.html
@@ -55,13 +55,31 @@ The group starts discussing protest, and revealing information about the company
 You are left with only three choices at this time:
 [[Quit the job and stay quiet]]
 [[Break NDA and protest]]
-[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="11" name="Stay quiet and keep coding" tags="" position="775,850" size="100,100"></tw-passagedata><tw-passagedata pid="12" name="Bring the issue up with your boss" tags="" position="1050,825" size="100,100">You attend a meeting with your boss, and discuss the possibility of discrimination within the drones due to an outdated database. Your boss, stressed and pressured to release the product as soon as possible, considers the issue, but quickly shuts you down.
+[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="11" name="Stay quiet and keep coding" tags="" position="775,825" size="100,100">You decide to stay quiet and continue working on the project. 
+
+After months of working on your AI model, the drones are released to the public, and are used as police survellience across the country.
+
+After a year of apparent success in Canada, multiple other governments from across the globe sign with Atlas and the drones enter mass production.
+
+Although most public information about the drones is positive, there are many news outlets that have been pushed to the bottom of search results. These articles discuss the suspected discrimination of the new drones, but the articles are somewhat censored via bill C-11. Other governments are not yet aware of this issue.
+
+[[Continue -&gt; Weaponization of the drones]]</tw-passagedata><tw-passagedata pid="12" name="Bring the issue up with your boss" tags="" position="1050,825" size="100,100">You attend a meeting with your boss, and discuss the possibility of discrimination within the drones due to an outdated database. Your boss, stressed and pressured to release the product as soon as possible, considers the issue, but quickly shuts you down.
 &#39;&#39;You should appreciate the opportunity we have provided you, rather than stirring up problems in the workplace. Keep quiet and keep coding, or get fired!&#39;&#39;
 
 This response is confusing and the language spoke towards you is upsetting. With rage fuelling inside of you, and a willingness to improve the world, you are left with two choices.
 
 [[Discuss the issue with co-workers]] 
-[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="13" name="Quit the job and stay quiet" tags="" position="1225,975" size="100,100"></tw-passagedata><tw-passagedata pid="14" name="Break NDA and protest" tags="" position="1425,975" size="100,100"></tw-passagedata></tw-storydata>
+[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="13" name="Quit the job and stay quiet" tags="" position="1425,975" size="100,100"></tw-passagedata><tw-passagedata pid="14" name="Break NDA and protest" tags="" position="1250,975" size="100,100"></tw-passagedata><tw-passagedata pid="15" name=" Weaponization of the drones" tags="" position="775,950" size="100,100">With the apparent large success of the drones world-wide, and terrorism rates increasing, many governments weaponize the drones to counteract attacks.
+
+The drones initially are just equipped with tear gas, acoustic weapons and pepper spray. However, over the next few months the drones are attacked by criminals, and lethal weapons are installed to protect the drones themselves, as well as the general population.
+
+Protest starts to errupt among the company, as many employees suspect discrimination within the AI models, but you are the only person with access to the database. Therefore, you are the only person who can provide evidence for this.
+
+You start to become paranoid knowing the fundamental flaw in training data that will innevidably lead to innocent deaths. You&#39;ve gone too far and decide quitting is no longer an option, cutting down your options.
+
+Do you [[Join the protesters -&gt;Break NDA and protest]]  or [[Continue your work]]?</tw-passagedata><tw-passagedata pid="16" name="Continue your work" tags="" position="775,1075" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X=&quot;)[=
+(text-colour:orange)[//A couple weeks after weaponization of the drones...//] &lt;!--Add CSS for fade in--&gt;
+(after:6s)[(go-to: &quot;Bad Ending&quot;)]</tw-passagedata><tw-passagedata pid="17" name="Bad Ending" tags="" position="775,1200" size="100,100">This is the bad ending!</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
