Added some stuff to the keep quiet path

--- a/CYOA.html
+++ b/CYOA.html
@@ -94,7 +94,15 @@ The three choices:
 [[Break NDA and protest]]
 [[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="10" name="Stay quiet and keep coding" tags="" position="775,825" size="100,100">(if: (history: where its name contains &quot;Bring the issue up with your boss&quot;)&#39;s length &gt;= 1)[Heeding the words of the department head, you decide to stay quiet and keep working on the software, hoping the issues would not come true.]
 
-(if: (history: where its name contains &quot;AI training&quot;)&#39;s length &gt;= 1)[You decide to keep quiet and continue working.]</tw-passagedata><tw-passagedata pid="11" name="Bring the issue up with your boss" tags="" position="1050,875" size="100,100">You decide to talk with the Surveillance Systems department head.
+(if: (history: where its name contains &quot;AI training&quot;)&#39;s length &gt;= 1)[You decide to keep quiet and continue working.]
+
+After a few months, development of the AI model is complete and ready to deploy. A press conference announcing the new software is held in the police headquarters with members of the development team in attendance. One of the reporters questions the use of such invasive surveillence monitoring but is quickly shut down.
+
+After the conference ends, you begin thinking of the ethical issues you once had in the earlier stages of development. You are about to reach your car when suddenly the pestering reporter recognizes you as one of the members on stage. He asks you to share some details of the AI recognition sofware.
+
+[[Ignore him and drive away]]
+[[Set up a meeting with him the next day]]
+[[Share your opinions of the software on the spot]]</tw-passagedata><tw-passagedata pid="11" name="Bring the issue up with your boss" tags="" position="1050,875" size="100,100">You decide to talk with the Surveillance Systems department head.
 
 You set up a meeting with your boss, and discuss the concerns you had with the software. Your boss, stressed and pressured to release the product as soon as possible, considers the issue, but quickly shuts you down.
 
@@ -103,9 +111,9 @@ You set up a meeting with your boss, and discuss the concerns you had with the s
 Your boss was firm and stern with their response, unwilling to budge or consider anything else. You leave the meeting upset, unsure what to do and demoralized. Some coworkers glanced up at you from their desks, almost as if they had heard the conversation...
 
 [[Discuss the issue with co-workers]] 
-[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="12" name="Break NDA and protest" tags="" position="1250,975" size="100,100"></tw-passagedata><tw-passagedata pid="13" name="Continue your work" tags="" position="775,1000" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X=&quot;)[=
+[[Stay quiet and keep coding]] </tw-passagedata><tw-passagedata pid="12" name="Break NDA and protest" tags="" position="1250,975" size="100,100"></tw-passagedata><tw-passagedata pid="13" name="Continue your work" tags="" position="500,775" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X=&quot;)[=
 &lt;span class=&quot;fade-in&quot;&gt;//test words...//&lt;/span&gt;
-(after:4s)[(go-to: &quot;Bad Ending&quot;)]</tw-passagedata><tw-passagedata pid="14" name="Bad Ending" tags="" position="775,1125" size="100,100">This is the bad ending!</tw-passagedata><tw-passagedata pid="15" name="Prelude" tags="" position="800,150" size="100,100">This &quot;Choose Your Own Adventure&quot; story is based on the case study, &quot;Automated Active Response Weaponry&quot;, by the ACM Comittee on Professional Ethics.
+(after:4s)[(go-to: &quot;Bad Ending&quot;)]</tw-passagedata><tw-passagedata pid="14" name="Bad Ending" tags="" position="550,1275" size="100,100">This is the bad ending!</tw-passagedata><tw-passagedata pid="15" name="Prelude" tags="" position="800,150" size="100,100">This &quot;Choose Your Own Adventure&quot; story is based on the case study, &quot;Automated Active Response Weaponry&quot;, by the ACM Comittee on Professional Ethics.
 
 Created by Daniel Todd, Fraser Wong, and Tallal Gohar.
 
@@ -115,7 +123,11 @@ Although it was disappointing you were not able to move up within your internshi
 
 While the job did not end up being as fulfilling and exciting as you had hoped for, you still walked away with experience for you to use in the future.
 
-(text-colour:red)[The End.]</tw-passagedata><tw-passagedata pid="17" name="GAME OVER" tags="" position="1000,1225" size="200,100">&lt;!--This will have the game stats, giving a rundown of the outcome the player got and what choices they followed to get the outcome.--&gt;</tw-passagedata><tw-passagedata pid="18" name="Quit the job and stay quiet" tags="" position="1425,950" size="100,100"></tw-passagedata></tw-storydata>
+(text-colour:red)[The End.]</tw-passagedata><tw-passagedata pid="17" name="GAME OVER" tags="" position="925,1475" size="200,100">&lt;!--This will have the game stats, giving a rundown of the outcome the player got and what choices they followed to get the outcome.--&gt;</tw-passagedata><tw-passagedata pid="18" name="Quit the job and stay quiet" tags="" position="1425,950" size="100,100"></tw-passagedata><tw-passagedata pid="19" name="Ignore him and drive away" tags="" position="600,1000" size="100,100">After ignoring the reporter, you stop worrying about the potential issues and go on with you day. Your team begins the maintenance and support part of the project and you forget about the problem. A few weeks later, a news story breaks out that the police misidentified and arrested a non-suspect. The team quickly looks at the software and finds a bug that caused 200% more positive hits. An emergency meeting is held with members of the company to discuss what to do next. They eventually ask you for your opinion. 
+
+[[Advocate for telling the truth]]
+[[Cover up the mistake and deny any wrong-doing]]
+</tw-passagedata><tw-passagedata pid="20" name="Set up a meeting with him the next day" tags="" position="975,1000" size="100,100"></tw-passagedata><tw-passagedata pid="21" name="Share your opinions of the software on the spot" tags="" position="800,1000" size="100,100"></tw-passagedata><tw-passagedata pid="22" name="Advocate for telling the truth" tags="" position="600,1125" size="100,100"></tw-passagedata><tw-passagedata pid="23" name="Cover up the mistake and deny any wrong-doing" tags="" position="475,1125" size="100,100">[[Bad Ending]] </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
